kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sol-service
  namespace: sol
  labels:
    app: sol
spec:
  selector:
    app: sol
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
