kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sol-ingress
  annotations:
    traefik.frontend.rule.type: PathPrefix
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: sol.projects.molamola.us
    http:
      paths:
      - path: /
        backend:
          serviceName: sol-service
          servicePort: web
